Exibindo fotos no dashboard

--- a/server/PhotoAlbum.API/appsettings.json
+++ b/server/PhotoAlbum.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost,1433; database=PhotoAlbumDB; trusted_connection=false; User ID=SA; Password=Senha123!"
+    //"DefaultConnection": "server=sqldata; database=UsuarioDB; trusted_connection=false; User ID=SA; Password=Senha123!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
