--- a/server/PhotoAlbum.API/PhotoAlbum.API.csproj
+++ b/server/PhotoAlbum.API/PhotoAlbum.API.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PhotoAlbum.Application\PhotoAlbum.Application.csproj" />
+    <ProjectReference Include="..\Shared.Infra\Shared.Infra.csproj" />
   </ItemGroup>
 
 </Project>
