--- a/server/Login.API/appsettings.json
+++ b/server/Login.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost,1433; database=PhotoAlbumDB; trusted_connection=false; User ID=SA; Password=Senha123!"
+    "MongoConnection": "mongodb://localhost:27017"
     //"DefaultConnection": "server=sqldata; database=UsuarioDB; trusted_connection=false; User ID=SA; Password=Senha123!"
   },
   "Logging": {
