--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@popperjs/core": "^2.11.5",
     "body-parser": "^1.20.0",
+    "bootstrap": "^5.2.0-beta1",
     "express-bearer-token": "^2.4.0",
     "jwt-decode": "^3.1.2",
+    "ngp-image-picker": "^2.3.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
